kubernetes/db/deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db
  namespace: time-capsule
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
        policy: db
    spec:
      containers:
      - name: db
        image: postgres:16
        imagePullPolicy: Always
        ports:
        volumeMounts:
          - name: postgres-db
            mountPath: /var/lib/postgresql/data
      volumes:
      - name: postgres-db
        persistentVolumeClaim:
          claimName: postgres-pvc
